[gd_scene load_steps=6 format=3 uid="uid://btedin2k01plm"]

[ext_resource type="Script" uid="uid://m0ps5w767dyf" path="res://Scripts/interactables/door.gd" id="1_p0e35"]
[ext_resource type="Texture2D" uid="uid://cp3bnmm6cwqvs" path="res://Sprites/interactables/iron bars door - CLOSED.png" id="2_p0e35"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_p0e35"]
properties/0/path = NodePath(".:isLocked")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:isOpened")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:seenByBody")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("CollisionShape2D:disabled")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0e35"]
size = Vector2(19.2311, 7.18797)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fahql"]
size = Vector2(6.11912, 19.8141)

[node name="Door" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_p0e35")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_p0e35")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p0e35")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 19)
rotation = -0.523599
shape = SubResource("RectangleShape2D_p0e35")

[node name="Back" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back"]
position = Vector2(13.7133, 16.5376)
rotation = 1.01578
shape = SubResource("RectangleShape2D_fahql")

[node name="Front" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front"]
position = Vector2(17, 22)
rotation = -2.0944
shape = SubResource("RectangleShape2D_fahql")

[connection signal="body_entered" from="Back" to="." method="_on_back_body_entered"]
[connection signal="body_exited" from="Back" to="." method="_on_back_body_exited"]
[connection signal="body_entered" from="Front" to="." method="_on_front_body_entered"]
[connection signal="body_exited" from="Front" to="." method="_on_front_body_exited"]
